--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@wojtekmaj/react-timerange-picker": "^2.4.0",
     "axios": "^0.19.2",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
+    "rc-time-picker": "^3.7.3",
     "react": "^16.12.0",
+    "react-compound-timer": "^1.1.15",
     "react-dom": "^16.12.0",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-time-picker": "^3.9.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "timer": "^1.0.1",
     "typescript": "~3.7.2",
     "yarn": "^1.22.0"
   },
